--- a/content/modulo3.html
+++ b/content/modulo3.html
@@ -18,45 +18,85 @@
 	<main>
 		<article>
 			
-			<h2>Apresentação</h2>
+<h2>Teoria de amostragem</h2>
+<p>A amostragem consiste em observar ou mensurar uma parte de uma população florestal para obter estimativas representativas de todo o restante desta mesma população. É uma forma de estimar, com confiança, parâmetros populacionais sem precisar mensurar toda a população.</p>
+<p>Deve-se entender a população como uma floresta ou forma de vegetação definida e com limites físicos conhecidos, ou seja, uma área especificamente determinada no espaço e no tempo, podendo abranger um país, um estado, uma região, um bioma, um determinado ecossistema ou um habitat específico, como uma mata de galeria dentro de uma região ou município, por exemplo, e um talhão de um plantio florestal.</p>
+<p>A amostra é uma parte da população e a unidade amostral é o espaço físico onde são medidas as características da floresta. Em geral, as unidades amostrais possuem área fixa, mas também podem ser de área variável, como no método de Prodan e na amostragem por pontos quadrantes.</p>
+<p>As unidades amostrais de área fixa podem variar em tamanho e em forma, sendo comumente denominadas de Parcelas.</p>
+<h2>Amostragem por área fixa: tamanho e forma de parcelas</h2>
+<p>O tamanho de uma unidade amostral deve variar em razão da estrutura da vegetação, sendo que o tamanho mínimo deve ser aquele que reflita a estrutura da comunidade/floresta, contendo as variações florísticas e estruturais da vegetação. Dessa forma, não deve ser muito grande, dificultando a repetição e orientação dentro da parcela, nem muito pequena, que não abranja a variação florística e estrutural da vegetação.</p>
+<p>Quanto à forma, as unidades amostrais podem ser circulares, retangulares, quadradas, em faixas. As parcelas circulares apresentam como vantagem em relação às demais o fato de possuírem maior área em relação ao perímetro e, deste modo, diminui-se as chances de erros relacionados à inclusão e exclusão de árvores na amostragem. Erros associados às medições das árvores localizadas próximas às bordas da unidade amostral, o chamado efeito de borda. Estas parcelas são mais difíceis de serem instaladas e medidas no campo e, por este motivo, não são muito utilizadas.</p>
+<p>As parcelas retangulares possuem maior efeito de borda, mas captam melhor os efeitos de gradientes ambientais e facilitam a orientação dos trabalhos dentro das mesmas. Por esses motivos as parcelas retangulares são as mais usuais.</p>
+<h2>Representatividade amostral</h2>
+<p>O número de unidades amostrais a serem mensuradas em uma floresta (ou o número de árvores a serem cubadas rigorosamente; ou ainda o número de árvores que terão os seus pares de altura e DAP medidos, para o ajuste de equações hipsométricas) deve ser baseado em um limite de erro estabelecido pelo pesquisador/mensurador, conforme um determinado nível de probabilidade, para a variável de interesse (densidade arbórea, DAP, altura, volume, cobertura do solo, etc).</p>
+<p>Através de uma pré-amostragem, denominada de amostragem piloto, calcula-se o número de unidades amostrais necessárias para compor a amostra representativa da população dentro do limite de erro estipulado ou estabelecido.</p>
+<p>Não existe um número mínimo de parcelas a serem consideradas na amostragem piloto ou pré-amostragem, mas deve-se observar alguns procedimentos padronizados por pesquisadores e que facilitam as análises, comparações e interpretação dos resultados.</p>
+<p>Em vegetação nativa, no Cerrado, para o cálculo da variância exige-se no mínimo 10 unidades amostrais, enquanto que para análises de regressão exige-se no mínimo 30 unidades amostrais, como preconizado no Manual de Parcelas Permanentes dos Biomas Cerrado e Pantanal (FELFILI et al. 2005).</p>
+<p>No caso das análises de regressão, há diferentes formas de avaliar se um modelo foi bem ajustado ou não. Avalia-se as distribuições gráficas dos resíduos, os coeficientes de determinação múltipla, os erros-padrão, a significância dos coeficientes de regressão parcial, assim como a multicolinearidade das variáveis, conforme recomendado por Drapper (1981) e Zar (2010). Os seguintes softwares podem ser utilizados no ajuste das equações: Microsoft Excell®, R® e PAST®.</p>
+<h2>Estimativas dos parâmetros populacionais</h2>
+<p>Para estimar os parâmetros da população considere a seguinte notação:</p>
+	<ul><li>X: variável de interesse (diâmetro, número de indivíduos, altura, volume);</li>
+		<li>n: amostra.</li></ul>
 
-			<p>Este curso é voltado para a capacitação profissional em Inventário Florestal. São apresentados e discutidos conceitos importantes relacionados à prática de inventários florestais.</p>
-			<p>O curso é estruturado em módulos, organizados por temas: definições, mensuração amostragem e análise de dados de vegetação.</p>
-			
-			<h2>Objetivo</h2>
+<h3>Média aritmética - <math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></math></h3> 
+<p>É uma medida de posição e, portanto, indica o valor médio da população.</p>
 
-			<p>Assegurar aos profissionais maior confiança no planejamento, na execução e na análise de dados de Inventários Florestais realizados no Brasil, seja em florestas nativas ou plantadas.</p>
-			
-			<h2>Programa</h2>
-			<ol>
-			    <li>Definição de inventário florestal</li>
-				<li>Definição de floresta</li>
-				<li>Tipos de inventário florestal</li>
-				<li>Teoria de amostragem</li>
-				<li>Mensuração florestal</li>
-				<li>Processos de amostragem</li>
-				<li>Fitossociologia e Diversidade</li>
-			</ol>
 
-			<h2>O que é Inventário Florestal?</h2>
-			
-			<p>Há várias definições para inventário florestal, porém, sabe-se que todas se complementam e demonstram a coerência dos pesquisadores envolvidos com o tema.</p>
-			
-			<p>Os professores Sylvio Péllico-Netto e Doádi Brena (1997) definem o inventário florestal como a &ldquo;atividade que visa informar sobre os recursos florestais existentes em uma determinada área&rdquo;. Este é um conceito que parece amplo, entretanto, mostra que o levantamento das informações deve ser feito em uma área específica e não em uma área qualquer. Portanto, deve-se delimitar a floresta (população) a ser inventariada.</p>
-			
-			<p>O professor Waldenei Queiroz define o inventário florestal como o &ldquo;ramo da ciência florestal que visa avaliar as variáveis qualitativas e quantitativas da floresta e suas inter-relações, assim como dinâmicas de crescimento e sucessão florestal&rdquo;. Note que este conceito distingue informações que podem ser mensuradas na floresta, inclui as características ambientais (solo, clima, relevo...) e o tempo como componentes do inventário florestal.</p>
-			
-			<p>O professor Carlos Sanquetta complementa as definições anteriores considerando o uso da estatística: &ldquo;qualquer tipo de levantamento florestal, porém, a &ldquo;marca registrada&rdquo; de um IF é a sua representatividade amostral e sua validade estatística&rdquo;. Perceba que, neste caso, o inventário florestal pode ser qualquer levantamento florestal em qualquer espaço-tempo, desde que tenha representatividade amostral e validade estatística. Ou seja, as estimativas dos parâmetros populacionais devem ser válidas e precisas.</p>
-			
-			<p>As definições acima podem ser agrupadas e resumidas da seguinte forma: &ldquo;Levantamento quantitativo e qualitativo dos recursos florestais em um determinado espaço-tempo e estatisticamente representativo&rdquo; (VENTUROLI, 2015).</p>
-			
-			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
+<math><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>=</mo><mfrac><mrow><mrow><msubsup><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></msubsup><mrow><msub><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msub></mrow></mrow></mrow><mrow><mi>n</mi></mrow></mfrac></math>
 
-			<ul>
-			    <li>Estimar as características existentes da floresta na época do primeiro inventário;</li>
-    			<li>Fazer o mesmo na época do segundo inventário; e</li>
-    			<li>Estimar as mudanças ocorridas na floresta durante o período compreendido entre os dois inventários.</li>
-			</ul>
+
+<h3>Variância - <math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></math></h3> 
+<p>Determina o grau de dispersão da variável de interesse em relação à sua média.</p>
+
+<math><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup><mo>=</mo><mfrac><mrow><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>n</mi></mrow></munderover><mrow><msup><mrow><mo>(</mo><msub><mrow><mi>x</mi></mrow><mrow><mi>i</mi></mrow></msub><mo>-</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>)</mo></mrow><mrow><mn>2</mn></mrow></msup></mrow></mrow></mrow><mrow><mi>n</mi><mo>-</mo><mn>1</mn></mrow></mfrac></math>
+ 
+<h3>Erro Padrão - <math><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></math></h3> 
+<p>Indica a precisão da média amostral em relação a todos os possíveis desvios-padrão (variância) na população de tamanho <i>n</i>.</p>
+
+<math><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><mi>n</mi></mrow></mfrac></msqrt></math>
+ 
+<h3>Erro de amostragem - Ea</h3>
+<p>Erro devido ao processo de amostragem. É estimado para um nível de probabilidade (1-α).</p>
+ 
+<p><math><msub><mrow><mi>E</mi><mi>r</mi><mi>r</mi><mi>o</mi><mi> </mi><mi>a</mi><mi>b</mi><mi>s</mi><mi>o</mi><mi>l</mi><mi>u</mi><mi>t</mi><mi>o</mi><mo>-</mo><mi> </mi><mi>E</mi></mrow><mrow><mi>a</mi></mrow></msub><mo>=</mo><mo>±</mo><mi>t</mi><mo>.</mo><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></math></p>
+
+<p><math><msub><mrow><mi>E</mi><mi>r</mi><mi>r</mi><mi>o</mi><mi> </mi><mi>r</mi><mi>e</mi><mi>l</mi><mi>a</mi><mi>t</mi><mi>i</mi><mi>v</mi><mi>o</mi><mi> </mi><mfenced separators="|"><mrow><mi>%</mi></mrow></mfenced><mo>-</mo><mi> </mi><mi>E</mi></mrow><mrow><mi>r</mi></mrow></msub><mo>=</mo><mo>±</mo><mfrac><mrow><mi>t</mi><mo>.</mo><msub><mrow><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></mfrac><mi>*</mi><mn>100</mn></math></p>
+
+<p>O valor de <i>t</i> é obtido na tabela de distribuição de <i>t-Student</i> para a probabilidade fixada e para os graus de liberdade da amostragem [número de unidades amostrais menos uma (n – 1)].</p>
+
+<h2>Intervalo de confiança para a média - IC</h2>
+
+<p>Embora a média amostral seja a melhor estimativa da média paramétrica da população, ela é apenas uma estimativa e, portanto, para inferir sobre a confiabilidade dessa estimativa é preciso calcular o Intervalo de Confiança – IC, que indica o seguinte: se todas as possíveis médias de tamanho n forem tomadas da população e se fosse calculado o Intervalo de Confiança para cada uma dessas amostras, X% desses intervalos de confiança conteriam a verdadeira média da população. Ou seja, para X% das amostras, o intervalo entre o limite <p>inferior e o limite superior do IC incluirá a verdadeira média da população.</p>
+<p>O IC só garante que X% das médias amostrais estarão dentro do intervalo (IC), sendo X a probabilidade de confiança estabelecida. Geralmente, X é estabelecido em Termos de Referência de Órgãos Ambientais ou pelo pesquisador, e fica entre 90%, 95% e 99% de confiança (P).</p>
+
+<math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>-</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>-</mo></mover><mo>≤</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>+</mo><msub><mrow><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math>
+
+
+
+<p>Estimativa para o total da população:</p>
+
+<math><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>=</mo><mi>N</mi><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></math>
+
+ 
+<p>Intervalo de confiança para o total:</p>
+
+<math><mi>I</mi><mi>C</mi><mfenced open="[" close="]" separators="|"><mrow><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>-</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub><mi> </mi><mo>≤</mo><mi>X</mi><mo>≤</mo><mover accent="true"><mrow><mi>X</mi></mrow><mo>^</mo></mover><mo>+</mo><msub><mrow><mi>N</mi><mi>t</mi><mi>s</mi></mrow><mrow><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover></mrow></msub></mrow></mfenced><mo>=</mo><mi>P</mi></math>
+
+<h2>Intensidade de amostragem</h2>
+<p>A intensidade amostral é a razão entre o tamanho da amostra (n) e o tamanho da população, isto é, a razão entre o número de unidades amostrais que compõem a amostra e o número total de unidades amostrais da população (N).</p>
+<p>A intensidade amostral pode ser expressa também pela razão entre a área amostrada (a) e a área total da população (A).</p>
+
+<math><mi>f</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac><mi> </mi><mi>o</mi><mi>u</mi><mi> </mi><mi>f</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>A</mi></mrow></mfrac></math>
+ 
+<h2>Número ideal de unidades amostrais que devem compor uma amostra</h2>
+<p>A expressão abaixo pode ser utilizada para quantificar o número mínimo de unidades amostrais que devem compor a amostra:</p>
+
+<p><math><mi>n</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>t</mi></mrow><mrow><mn>2</mn></mrow></msup><msubsup><mrow><mi>s</mi></mrow><mrow><mi>x</mi></mrow><mrow><mn>2</mn></mrow></msubsup></mrow><mrow><msup><mrow><mi>E</mi></mrow><mrow><mn>2</mn></mrow></msup></mrow></mfrac></math></p>
+
+<p><math><mi>E</mi><mo>=</mo><mo>(</mo><mi>L</mi><mi>E</mi><mo>.</mo><mover accent="true"><mrow><mi>x</mi></mrow><mo>-</mo></mover><mo>)</mo></math> </p>
+ 
+<p>LE = Limite de erro de amostragem admitido, geralmente 10%.</p>
+
 
 		</article>
 
@@ -97,6 +137,8 @@
 	</nav>
 
 	<script src="../assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../assets/js/mathjax-config.js"></script>
+	<script src="../assets/js/MathJax/MathJax.js?config=MML_HTMLorMML"></script>
 	<script src="../assets/js/app.js"></script>
 </body>
 </html>
