--- a/content/modulo5.html
+++ b/content/modulo5.html
@@ -97,6 +97,8 @@
 	</nav>
 
 	<script src="../assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../assets/js/mathjax-config.js"></script>
+	<script src="../assets/js/MathJax/MathJax.js?config=MML_HTMLorMML"></script>
 	<script src="../assets/js/app.js"></script>
 </body>
 </html>
