--- a/index.html
+++ b/index.html
@@ -51,13 +51,113 @@
 			
 			<p>As definições acima podem ser agrupadas e resumidas da seguinte forma: &ldquo;Levantamento quantitativo e qualitativo dos recursos florestais em um determinado espaço-tempo e estatisticamente representativo&rdquo; (VENTUROLI, 2015).</p>
 			
-			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
+			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ" target="blank">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
 
 			<ul>
 			    <li>Estimar as características existentes da floresta na época do primeiro inventário;</li>
     			<li>Fazer o mesmo na época do segundo inventário; e</li>
     			<li>Estimar as mudanças ocorridas na floresta durante o período compreendido entre os dois inventários.</li>
 			</ul>
+
+
+<h2>O que é Floresta?</h2>
+
+<p>O primeiro procedimento é entender o que é uma floresta. No senso comum, floresta pode ser definida como: “qualquer vegetação que apresente predominância de indivíduos lenhosos, onde as copas das árvores se tocam formando um dossel”.</p>
+
+<p>São sinônimos de floresta: mata, mato, bosque, capoeira, selva.</p>
+
+<p>O Dicionário Aurélio da Língua Portuguesa traz a seguinte definição para florestal:</p>
+
+<h3>“floresta</h3>
+<!-- [Do fr. ant. forest, atual forêt, com infl. De flor.] -->
+<p>Substantivo feminino.</p>
+<p>1. Formação arbórea densa, na qual, ger., as copas se tocam; mata.</p>
+<p>4. Ecol. Ecossistema terrestre formado por associações arbóreas de grande extensão, em estratos superpostos (o musgoso, o herbáceo, o arbustivo e o arborescente), o que permite a utilização máxima da energia solar e a maior diversificação dos nichos ecológicos.</p>
+
+
+<p>Porém, para tratar de florestas no meio acadêmico, científico e governamental, necessita-se de uma definição mais técnica e objetiva, que possibilite a estimativa de área de florestas do país e também atendam a regulamentos e normas, nacionais ou internacionais, que não podem permitir dúvidas de interpretação.</p>
+
+<p>Neste sentido, a FAO (2004) apresenta o seguinte conceito de floresta:</p>
+
+<p>"Floresta - área medindo mais de 0,5ha com árvores maiores que 5m de altura e cobertura de copa superior a 10%, ou árvores capazes de alcançar estes parâmetros <i>in situ</i>. Isso não inclui terra que está predominantemente sob uso agrícola ou urbano."</p>
+
+<p>O IBGE (2012) considera como floresta as tipologias de vegetação lenhosas que correspondem às seguintes categorias:</p>
+
+	<ul><li>Floresta Ombrófila Densa;</li>
+		<li>Floresta Ombrófila Aberta;</li>
+		<li>Floresta Ombrófila Mista;</li>
+		<li>Floresta Estacional Semidecidual;</li>
+		<li>Floresta Estacional Decidual;</li>
+		<li>Campinarana (florestada e arborizada);</li>
+		<li>Savana (florestada e arborizada) - Cerradão e Campo Cerrado;</li>
+		<li>Savana Estépica (florestada e arborizada) – Caatinga arbórea;</li>
+		<li>Estepe (arborizada);</li>
+		<li>Vegetação com influência marinha, fluviomarinha (arbóreas);</li>
+		<li>Vegetação remanescente em contatos em que pelo menos uma formação seja florestal;</li>
+		<li>Vegetação secundária em áreas florestais;</li>
+		<li>Reflorestamento.</li></ul>
+
+<p>O Brasil é um país florestal com 463 milhões de hectares (54,4% do seu território) de florestas naturais e plantadas – o que representa a segunda maior área de florestas do mundo, atrás apenas da Rússia, que apresenta uma cobertura florestal de mais de 800 milhões de hectares (SERVIÇO FLORESTA BRASILEIRO, 2013). No entanto, as estimativas do estoque de carbono indicam que as florestas do Brasil estocam 62 milhões de toneladas de carbono na biomassa, enquanto as florestas russas estocam cerca de 32 milhões de toneladas de carbono (Idem, 2013).</p>
+<p>Em relação à área de florestas plantadas, o Brasil ocupa a 8ª posição mundial, com aproximadamente 6,5 milhões de hectares. A China lidera este ranking com 77,7 milhões de hectares de florestas plantadas, seguida pelos Estados Unidos, com 25 milhões de hectares, e da Rússia, com 16 milhões de hectares (Idem, 2013).</p>
+ 
+<h2>Dicas úteis para a realização de Inventários Florestais</h2>
+
+<ol><li><b>Softwares utilizados em Inventários Florestais:</b></li>
+	<ul><li>MATA NATIVA® – <a href="http://www.matanativa.com.br/" target="blank">www.matanativa.com.br/</a></li>
+		<li>Microsoft Excell® – <a href="http://www.microsoft.com" target="blank">www.microsoft.com</a></li>
+		<li>MVSP® – <a href="http://www.kovcomp.co.uk/mvsp/index.html" target="blank">www.kovcomp.co.uk/mvsp/index.html</a></li>
+		<li>PAST® – <a href="http://folk.uio.no/ohammer/past/" target="blank">http://folk.uio.no/ohammer/past/</a></li>
+		<li>PC-ORD®– <a href="http://home.centurytel.net/~mjm/pcordwin.ht" target="blank">http://home.centurytel.net/~mjm/pcordwin.htm</a></li></ul>
+
+<p>Lembre-se: o melhor software estatístico é aquele que você sabe utilizar!</p>
+
+<li><b>Equipamentos e instrumentos de medição:</b></li>
+	<ul><li>Haglof – <a href="http://www.haglofcg.com/" target="blank">http://www.haglofcg.com/</a></li>
+		<li>Elo Forte – <a href="http://www.eloforte.com.br" target="blank">www.eloforte.com.br</a></li>
+		<li>Forestry Suppliers – <a href="http://www.forestry-suppliers.com" target="blank">www.forestry-suppliers.com</a></li>
+		<li>Gardena Store – <a href="http://www.gardenastore.com.br" target="blank">www.gardenastore.com.br</a></li></ul>
+
+<li><b>Sites para conferência de nomes científicos das espécies:</b></li>
+	<ul><li><a href="http://floradobrasil.jbrj.gov.br/2012/" target="blank">http://floradobrasil.jbrj.gov.br/2012/</a></li>
+		<li><a href="http://www.ipni.org" target="blank">www.ipni.org</a></li>
+		<li><a href="http://www.tropicos.org" target="blank">www.tropicos.org</a></li>
+			<li><a href="http://florabrasiliensis.cria.org.br" target="blank">http://florabrasiliensis.cria.org.br/</a></li></ul>
+<p>Procure sempre o herbário da sua região!</p>
+<li><b>Publique o seu Inventário Florestal</b></li>
+	<ul><li><a href="http://www.treedimensional.org" target="blank">www.treedimensional.org</a> (Leia, cite e publique!)</li></ul>
+
+<li><b>Lista de equipamentos fundamentais para a realização de um Inventário Florestal</b></li>
+
+
+<p><b>Equipamentos de proteção e segurança:</b> canivete, cantil, capa de chuva, capacete, garrafa de água de 5 litros, kit primeiros socorros, lanterna, luvas macias e resistentes (par), óculos de proteção, perneiras (par), rádios de comunicação, protetor solar e apito.</p>
+
+<p><b>Equipamentos para identificação</b>: boné, camiseta (manga longa), colete e crachá.</p>
+
+<p><b>Equipamentos para anotações e apoio:</b> balizas para auxiliar na demarcação das parcelas, caderneta de campo, caixa de papelão para envio do material botânico, caneta nanquim, cordão para amarração das prensas (rolo), etiquetas (caixa), facão, folhas de papel jornal, folhas de papelão, giz para cimento (caixa), kit ficha de campo, lápis e borracha, lima, mochila (30 l), pincel atômico permanente, prancheta, prensa, rolo de fita crepe (qualidade).</p>
+
+<p><b>Equipamentos para medições/localização/identificação do terreno:</b> carta-imagem por unidade amostral, estacas de alumínio, bússola, clinômetro, marreta, GPS de navegação, suta de 50cm, fita diamétrica, trena de 20m, trena de 50m, vara telescópica, máquina fotográfica.</p>
+
+<p><b>Equipamentos para a coleta e identificação de material botânico:</b> álcool 70% (l), binóculos, borrifador, podão rolo de fita plástica (200m), sacos plásticos de lixo (50 l), tesoura de poda, caixa plástica para armazenamento de material botânico.</p>
+
+</ol> 
+
+<h2>Referências</h2>
+
+<p>FAO. <b>Global forest resources assessment.</b> FRA 2015. Rome: FAO, 2015.</p>
+
+<p>FERREIRA, A. B. de H. <b>Dicionário aurélio da língua portuguesa.</b> 5. ed. Curitiba: Positivo, 2010. 2272 p.</p>
+
+<p>IBGE. <b>Manual técnico da vegetação brasileira.</b> Rio de Janeiro: IBGE, 2012. 276 p.</p>
+
+<p>PÉLLICO-NETTO, S.; BRENA, D. <b>Inventário florestal.</b> Curitiba: Edição dos Autores, 1997.</p>
+
+<p>QUEIROZ, W. T. <b>Amostragem em inventário florestal.</b> Belém: UFRA, 2012.</p>
+
+<p>SANQUETTA, C. R. et al. <b>Inventários florestais:</b> planejamento e execução. Curitiba: Muti-Graphic Gráfica e Editora, 2014. 406 p.</p>
+
+<p>SERVIÇO FLORESTAL BRASILEIRO. <b>Florestas do Brasil em resumo – 2013</b>: dados de 2007 a 2012. Brasília, DF: SFB, 2013.</p>
+
+<p>VENTUROLI, F. <b>Inventário florestal</b>: princípios para uma aplicação prática. Goiânia: Cegraf/UFG, 2015. 57 p.</p>
 
 		</article>
 
