--- a/content/modulo4.html
+++ b/content/modulo4.html
@@ -17,46 +17,149 @@
 
 	<main>
 		<article>
-			
-			<h2>Apresentação</h2>
 
-			<p>Este curso é voltado para a capacitação profissional em Inventário Florestal. São apresentados e discutidos conceitos importantes relacionados à prática de inventários florestais.</p>
-			<p>O curso é estruturado em módulos, organizados por temas: definições, mensuração amostragem e análise de dados de vegetação.</p>
-			
-			<h2>Objetivo</h2>
+<h2>Amostragem aleatória</h2>
+<p>Este é o procedimento mais usual para inventários florestais e baseia-se no pressuposto de que todas as unidades amostrais têm a mesma chance de serem amostradas na população.</p>
+<h2>Pré-requisito:</h2>
+<p>Ambiente uniforme, por exemplo, uma mesma fisionomia de vegetação ou uma floresta plantada com uma única espécie e com uma única idade.
+Procedimentos:</p>
 
-			<p>Assegurar aos profissionais maior confiança no planejamento, na execução e na análise de dados de Inventários Florestais realizados no Brasil, seja em florestas nativas ou plantadas.</p>
-			
-			<h2>Programa</h2>
-			<ol>
-			    <li>Definição de inventário florestal</li>
-				<li>Definição de floresta</li>
-				<li>Tipos de inventário florestal</li>
-				<li>Teoria de amostragem</li>
-				<li>Mensuração florestal</li>
-				<li>Processos de amostragem</li>
-				<li>Fitossociologia e Diversidade</li>
-			</ol>
+	<ol><li>Delimitar o universo amostral. Exemplo: Trecho da cabeceira de um rio; um talhão de Eucalipto com a mesma idade;</li>
+		<li>Sobrepor uma grade de unidades amostrais sobre a área amostral. Pode-se usar mapas, imagens de satélite ou fotografias digitais obtidas por Veículo Aéreo Não Tripulável (VANT). O procedimento consiste em dividir a população em unidades de área fixa com a forma e o tamanho das unidades amostrais (u.a.);</li>
+		<li>Sortear uma amostra (conjunto de unidades amostrais a serem medidas). Exemplo: 50 parcelas (u.a.) de 20m x 50m em um total de 1000 u.a. da população;</li>
+		<li>Calcular a intensidade amostral segundo um limite de erro e nível de probabilidade estabelecidos. Os mais comuns são 10% de erro a 95% de probabilidade para a variável de interesse (volume, número de árvores dentro das parcelas);</li>
+		<li>Complementar a amostragem, se necessário, para atingir o número ideal de unidades amostrais para garantir a representatividade amostral;</li>
+		<li>Calcular os intervalos de confiança para a média e para o total.</li></ol>
 
-			<h2>O que é Inventário Florestal?</h2>
-			
-			<p>Há várias definições para inventário florestal, porém, sabe-se que todas se complementam e demonstram a coerência dos pesquisadores envolvidos com o tema.</p>
-			
-			<p>Os professores Sylvio Péllico-Netto e Doádi Brena (1997) definem o inventário florestal como a &ldquo;atividade que visa informar sobre os recursos florestais existentes em uma determinada área&rdquo;. Este é um conceito que parece amplo, entretanto, mostra que o levantamento das informações deve ser feito em uma área específica e não em uma área qualquer. Portanto, deve-se delimitar a floresta (população) a ser inventariada.</p>
-			
-			<p>O professor Waldenei Queiroz define o inventário florestal como o &ldquo;ramo da ciência florestal que visa avaliar as variáveis qualitativas e quantitativas da floresta e suas inter-relações, assim como dinâmicas de crescimento e sucessão florestal&rdquo;. Note que este conceito distingue informações que podem ser mensuradas na floresta, inclui as características ambientais (solo, clima, relevo...) e o tempo como componentes do inventário florestal.</p>
-			
-			<p>O professor Carlos Sanquetta complementa as definições anteriores considerando o uso da estatística: &ldquo;qualquer tipo de levantamento florestal, porém, a &ldquo;marca registrada&rdquo; de um IF é a sua representatividade amostral e sua validade estatística&rdquo;. Perceba que, neste caso, o inventário florestal pode ser qualquer levantamento florestal em qualquer espaço-tempo, desde que tenha representatividade amostral e validade estatística. Ou seja, as estimativas dos parâmetros populacionais devem ser válidas e precisas.</p>
-			
-			<p>As definições acima podem ser agrupadas e resumidas da seguinte forma: &ldquo;Levantamento quantitativo e qualitativo dos recursos florestais em um determinado espaço-tempo e estatisticamente representativo&rdquo; (VENTUROLI, 2015).</p>
-			
-			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
+<p>Exemplo:</p>
+	Determinar o volume de madeira de uma floresta de eucalipto de 50 hectares sobre latossolo vermelho escuro (ambiente uniforme), com seis anos de idade.
+Após o mapeamento da área e a divisão das unidades amostrais, o próximo passo é realizar o Inventário Piloto.
+Neste caso, considerou-se um sorteio aleatório de 10 parcelas de 20m x 50m dentro de um universo amostral composto por 500 parcelas possíveis (50 hectares). O volume de madeira (m³) em cada parcela amostrada encontra-se na tabela abaixo.
 
-			<ul>
-			    <li>Estimar as características existentes da floresta na época do primeiro inventário;</li>
-    			<li>Fazer o mesmo na época do segundo inventário; e</li>
-    			<li>Estimar as mudanças ocorridas na floresta durante o período compreendido entre os dois inventários.</li>
-			</ul>
+
+Volume de madeira (m³) de cada árvore cubada rigorosamente em cada uma das dez parcelas de 20m x 50m do Inventário Piloto
+	Volume (m³)
+Árvore	1	2	3	4	5	6	7	8	9	10
+1	1,01	0,57	1,24	0,71	1,37	0,65	0,59	0,32	0,73	0,62
+2	0,93	1,16	0,98	1,12	1,36	0,82	1,08	1,17	0,63	0,97
+3	1,00	1,27	1,39	1,27	0,87	0,66	0,66	1,07	0,70	1,17
+4	0,69	1,09	0,69	0,85	0,60	1,29	0,72	1,23	1,39	1,12
+5	0,61	0,97	1,12	0,79	0,75	0,56	0,58	1	1,24	1,17
+6	0,81	0,83	0,72	1,00	1,40	1,38	0,83	0,19	0,81	1,19
+7	1,30	0,62	0,88	1,40	0,87	1,39	0,95	0,37	1,06	1,35
+8	1,28	1,10	0,73	0,85	1,13	0,67	1,40	0,94	0,73	0,87
+9	1,02	1,15	1,19	1,37	1,39	0,89	1,32	0,59	0,92	1,26
+10	0,78	1,26	1,22	1,14	0,86	1,04	0,96	0,64	1,09	1,31
+11	0,61	1,36	1,10	0,65	1,41	1,26	0,69	0,2	0,86	1,01
+12	0,66	0,61	0,92	0,62	0,92	1,11	0,84		0,84	0,96
+13	1,25	0,80	1,05	0,91	0,94	0,58	1,32		0,87	0,87
+14	1,36		1,08	0,69	1,09	1,03	0,82		1,05	0,82
+15	1,36		1,19	1,41	1,08		0,64			0,63
+16	0,72		0,64	0,92	1,07		1,01			
+Total	15,39	12,79	16,14	15,7	17,11	13,33	14,41	7,72	12,92	15,32
+
+A próxima etapa é estimar os parâmetros da população que permitem checar a representatividade amostral.
+Média
+ 
+
+Variância
+ 
+
+A representatividade amostral é calculada da seguinte forma:
+ 
+O valor tabelado de t-Student com 9 graus de liberdade (10-1) e 95% de probabilidade (1-95) é:
+  – ver Anexo A.
+O limite de erro admitido para esta amostragem foi de 10% da média:
+ 
+	Neste caso, verificou-se que a amostragem não foi suficiente para representar significativamente a população, pois, com esta variância nos volumes das parcelas seriam necessárias pelo menos 18 parcelas para conseguir a representatividade estatística da população.
+	O passo seguinte é ajustar a intensidade amostral até atingir um valor de n constante. Isso é feito calculando-se sucessivos valores de n.
+Primeiramente, calcula-se um n considerando uma amostragem de 18 parcelas onde foram obtidas a mesma média e variância das 10 parcelas já amostradas (suposição). Note que agora o valor de t será ajustado para o valor que represente 17 graus de liberdade [ ], com os mesmos 95% de confiabilidade, da seguinte forma:
+ 
+	O número 15 ainda não é suficiente para ser considerado representativo da população, pois não está próximo de 18, o valor anterior. Dessa forma, repete-se o cálculo de n considerando 14 graus de liberdade e 95% de confiança [ :
+ 
+	Note que desta vez a intensidade amostral foi praticamente a mesma que a anterior, ou seja, 16 parcelas. O procedimento agora é voltar ao campo e medir mais seis parcelas, pois 10 já foram medidas no inventário piloto. Isto feito, pode-se dar sequência às estimativas dos parâmetros populacionais.
+Como exercício, lista-se mais seis valores de volume total (m³) para as parcelas complementares do inventário florestal, considerando-o como o inventário definitivo:
+
+Parcelas	11	12	13	14	15	16
+Volume total (m³)	14,3	13,2	12,6	10,01	13,4	11,05
+
+Segue o inventário florestal:
+Calcula-se uma nova média e variância amostral e as demais estimativas dos parâmetros populacionais.
+Média
+ 
+Variância
+ 
+Erro padrão
+  ou   
+Erro de amostragem -  
+
+
+
+
+
+Intervalo de confiança para a média
+
+
+
+Total da população
+ 
+Estimativa do total por hectare
+ 
+Intervalo de confiança para o total da população
+
+
+
+
+
+A floresta estudada possui entre 6.095m³ e 7.365m³ de madeira, com 95% de confiança. Ou seja, se forem feitas 100 amostragens com 16 parcelas nesta população, 95% dessas amostragens vão apresentar um volume florestal dentro do intervalo de confiança estimado.
+Considerando que a floresta tem seis anos de idade, uma estimativa média de produção por ano é obtida dividindo-se os totais por hectare pela idade. Com isso, estima-se, com 95% de confiança, que a floresta cresceu em média entre 20,31m³.ha-1.ano-1 e 24,55m³.ha-1.ano-1.
+4.2 Parcelas de área variável: o método de Prodan 
+Este método é conhecido como o método das seis árvores e foi apresentado por Prodan em 1968, em Freiburg, na Alemanha (PÉLLICO NETO; BRENA, 1997).
+Consiste em alocar pontos amostrais na floresta segundo um delineamento amostral qualquer, o aleatório, por exemplo.
+Em cada ponto amostral medem-se as seis (6) árvores mais próximas (sorteia-se os pontos na floresta), considerando o limite de inclusão na amostragem (DAP > 5cm, por exemplo), e assume-se que essas árvores encontram-se em uma parcela circular cujo raio R é dado pela distância ponto-árvore entre a última árvore (sexta árvore) e o ponto, conforme apresentado na Figura 5.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Figura 5. Configuração de uma unidade amostral de área variável onde o raio circular é determinado pela distância entre o centro da unidade amostral (ponto) e a sexta árvore mais próxima.
+
+O raio da parcela de área variável R é calculado pela distância do ponto central à sexta árvore (R6) adicionado da metade o diâmetro desta sexta árvore:
+ 
+Estimativa do número de árvores por hectare 
+	A estimativa do número de árvores por hectare é feita relacionando-se a área em que se encontram as árvores amostras (seis árvores) com o número de árvores em cada ponto (seis árvores). Como em todos os pontos são medidas exatamente seis árvores, varia-se somente a área das parcelas, ou seja, a distância da sexta árvore ao ponto. Daí vem o nome: parcela de área variável.
+	Considerando que apenas metade da sexta árvore está dentro da parcela, pois é a distância entre o ponto central P e o centro da sexta árvore que determinam o raio da parcela R, cada parcela possuirá 5,5 árvores e não seis. Desta forma, a estimativa do número de árvores por hectare (N) se dá pela relação abaixo:
+
+ 
+
+Onde πR2 é a área da unidade amostral.
+Estimativa da área basal por hectare
+ 
+Estimativa do volume por hectare 
+A estimativa do volume por hectare, a partir da volumetria de cada uma das seis árvores amostradas é dada por: 
+ 
+Vantagens e desvantagens do método de Prodan
+As principais vantagens do método de Prodan, indicadas por Péllico Netto e Brena (1997) são: 
+•	É um método prático e de fácil operacionalidade no campo;
+•	Dado o tamanho da unidade, é possível levantar várias unidades amostrais no tempo equivalente à medição de uma única unidade de área fixa;
+•	Com uma rede de pontos distribuídos dentro do povoamento pode-se conseguir uma visão mais abrangente do mesmo;
+•	Não ocorrem erros de demarcação de unidades de amostra;
+•	Diminui o efeito de borda.
+
+As principais desvantagens deste método, segundo os mesmos autores: Péllico Netto e Brena são:
+•	Os estimadores podem gerar tendências quando as árvores estão muito agrupadas ou muito espalhadas no povoamento;
+Devido ao pequeno tamanho da unidade amostral, não há como obter bons estimadores para variáveis de manejo florestal, como altura dominante e mortalidade.
+
+
 
 		</article>
 
@@ -97,6 +200,8 @@
 	</nav>
 
 	<script src="../assets/js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="../assets/js/mathjax-config.js"></script>
+	<script src="../assets/js/MathJax/MathJax.js?config=MML_HTMLorMML"></script>
 	<script src="../assets/js/app.js"></script>
 </body>
 </html>
